--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3.8'
 services:
   postgres:
     image: postgres:15.2
@@ -11,6 +11,10 @@ services:
         max-size: 10m
         max-file: "3"
     ports:
-      - '5433:5432'
+      - '5432:5432'
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
+    user: "root"
+
+volumes:
+ postgres-data:
